Fixed bug #32799 (crash: calling the corresponding global var during the destruct)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@187724 c90b9560-bf6c-de11-be94-00142212c4b1